BootStrap 3 support fixed
1. Class pagination added to ul
2. Cursor css fixed

--- a/css/documentation.css
+++ b/css/documentation.css
@@ -119,3 +119,11 @@
 {
     width:300px;
 }
+
+.pagination ul > li > a:hover{
+	cursor: pointer;
+}
+
+.pagination ul > li.active > a:hover{
+	cursor: default;
+}
